fix notebooks for local sample data

--- a/notebooks/data_plotting_example.ipynb
+++ b/notebooks/data_plotting_example.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Example notebook: data observation and plotting\n",
-    "First, download the sample data stored in the `sample` directory. Then set SAMPLE_DIR in the first cell to point to that location. This example notebook uses both the `features.tsv` and `participants.tsv` files."
+    "This example notebook uses both the `features.tsv` and `participants.tsv` files in the `sample` data directory."
    ]
   },
   {
@@ -15,13 +15,21 @@
    "outputs": [],
    "source": [
     "# Imports.\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import os\n",
+    "import os.path\n",
     "\n",
-    "# Location of 'sample' directory.\n",
-    "SAMPLE_DIR=\"c:/Data/ABPM/sample\""
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Location of 'sample' data directory.\n",
+    "DATA_DIR=os.path.join('..', 'sample')"
    ]
   },
   {
@@ -31,12 +39,12 @@
    "outputs": [],
    "source": [
     "# Load as dataframes, and join features/participants files on pid field.\n",
-    "ppt_df = pd.read_csv(os.path.join(SAMPLE_DIR, 'participants.tsv'), delimiter='\\t')\n",
-    "feat_df = pd.read_csv(os.path.join(SAMPLE_DIR, 'features.tsv'), delimiter='\\t')\n",
+    "ppt_df = pd.read_csv(os.path.join(DATA_DIR, 'participants.tsv'), delimiter='\\t')\n",
+    "feat_df = pd.read_csv(os.path.join(DATA_DIR, 'features.tsv'), delimiter='\\t')\n",
     "comb_df = ppt_df.merge(feat_df, how='left', left_on='pid', right_on='pid')\n",
     "\n",
     "# View combined dataframe.\n",
-    "comb_df\n"
+    "comb_df"
    ]
   },
   {
@@ -79,7 +87,7 @@
    "hash": "b18b75db36c2d0d85abbd33565ed2654ca27e8bd1e1e0321301bf8151a8b2927"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
