--- a/notebooks/prediction_example.ipynb
+++ b/notebooks/prediction_example.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "# Example notebook: BP Prediction\n",
-    "First, download the sample data stored in the `sample` directory. Then set SAMPLE_DIR in the first cell to point to that location.\n",
-    "This example notebook uses both the `features.tsv` and `participants.tsv` files."
+    "This example notebook uses both the `features.tsv` and `participants.tsv` files in the `sample` data directory."
    ]
   },
   {
@@ -16,15 +15,22 @@
    "outputs": [],
    "source": [
     "# Imports.\n",
+    "import os.path\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import linear_model\n",
-    "from sklearn import model_selection\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Location of 'sample' directory.\n",
-    "SAMPLE_DIR=\"C:/Data/ABPM/sample\""
+    "from sklearn import linear_model, model_selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Location of 'sample' data directory.\n",
+    "DATA_DIR=os.path.join('..', 'sample')"
    ]
   },
   {
@@ -34,8 +40,8 @@
    "outputs": [],
    "source": [
     "# Load as dataframes, and join features/participants files on pid field.\n",
-    "ppt_df = pd.read_csv(os.path.join(SAMPLE_DIR, 'participants.tsv'), delimiter='\\t')\n",
-    "feat_df = pd.read_csv(os.path.join(SAMPLE_DIR, 'features.tsv'), delimiter='\\t')\n",
+    "ppt_df = pd.read_csv(os.path.join(DATA_DIR, 'participants.tsv'), delimiter='\\t')\n",
+    "feat_df = pd.read_csv(os.path.join(DATA_DIR, 'features.tsv'), delimiter='\\t')\n",
     "comb_df = ppt_df.merge(feat_df, how='left', left_on='pid', right_on='pid')\n",
     "\n",
     "# View key aspects of combined dataframe: participant id (pid), study phase, and measurement within phase.\n",
@@ -137,13 +143,6 @@
     "plt.xlabel(target_feature)\n",
     "plt.ylabel('False Prediction')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -151,7 +150,7 @@
    "hash": "b18b75db36c2d0d85abbd33565ed2654ca27e8bd1e1e0321301bf8151a8b2927"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
