--- a/notebooks/waveform_example.ipynb
+++ b/notebooks/waveform_example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Example notebook: waveform plotting and annotation\n",
-    "First, download the sample data stored in the `sample` directory. Then set SAMPLE_DIR in the first cell to point to that location. This example notebook uses `participants.tsv`, `measurements_oscillometric.tsv`, and the raw waveform data stored in the `measurements_oscillometric` subdirectory."
+    "This example notebook uses `participants.tsv` and `measurements_oscillometric.tsv` in the `samples` data directory, and the raw waveform data stored in the `measurements_oscillometric` subdirectory."
    ]
   },
   {
@@ -21,10 +21,18 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from scipy import signal\n",
-    "import os\n",
-    "\n",
-    "# Location of 'sample' directory.\n",
-    "SAMPLE_DIR=\"C:/data/ABPM/sample\""
+    "import os.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb4824ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Location of 'sample' data directory.\n",
+    "DATA_DIR=os.path.join('..', 'sample')"
    ]
   },
   {
@@ -54,8 +62,8 @@
    "outputs": [],
    "source": [
     "# Load participants.tsv and measurements.tsv dataframes.\n",
-    "ppt_df = pd.read_csv(os.path.join(SAMPLE_DIR, 'participants.tsv'), delimiter='\\t')\n",
-    "meas_df = pd.read_csv(os.path.join(SAMPLE_DIR, 'measurements_oscillometric.tsv'), delimiter='\\t')"
+    "ppt_df = pd.read_csv(os.path.join(DATA_DIR, 'participants.tsv'), delimiter='\\t')\n",
+    "meas_df = pd.read_csv(os.path.join(DATA_DIR, 'measurements_oscillometric.tsv'), delimiter='\\t')"
    ]
   },
   {
@@ -89,7 +97,7 @@
    "outputs": [],
    "source": [
     "# Load the raw waveform data for the measurement of interest.\n",
-    "waveform_df = pd.read_csv(os.path.join(SAMPLE_DIR, meas_series.waveform_file_path), delimiter='\\t')"
+    "waveform_df = pd.read_csv(os.path.join(DATA_DIR, meas_series.waveform_file_path), delimiter='\\t')"
    ]
   },
   {
@@ -131,19 +139,11 @@
     "plt.xlim(0,10)\n",
     "plt.ylabel('PPG (AU)')    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95c993ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
