--- a/notebooks/waveform_example.ipynb
+++ b/notebooks/waveform_example.ipynb
@@ -17,11 +17,12 @@
    "outputs": [],
    "source": [
     "# Imports.\n",
-    "import pandas as pd\n",
+    "import os.path\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy import signal\n",
-    "import os.path"
+    "import pandas as pd\n",
+    "from scipy import signal"
    ]
   },
   {
